src/main/java/com/example/sanctionedpeopleservice/common/error/model/ErrorStatus.java
package com.example.sanctionedpeopleservice.common.error.model;

public enum ErrorStatus {
  PERSON_NOT_FOUND,
  PERSON_EXIST
}
